...
            app:behavior_peekHeight="80dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:elevation="8dp"
            android:onClick="@{vm::onSubmit}"
            android:clickable="@{safeUnbox(vm.bottomSheetState) == 4}"
...
